--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movement</title>
+    <title>Nodes</title>
     <script type="module" src="./src/js/index.js"></script>
     <link rel="stylesheet" href="./index.css">
-    <link rel="icon" type="image/png" href="./res/images/square.png">
 </head>
 <body>
-    <canvas id="game-canvas"></canvas>
+    <canvas id="editor-canvas"></canvas>
 </body>
 </html>
